--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Présentation JavaScript
 
-Ici se trouve tous les fichiers nécessaires à la présentation réalisée avec impress.js.
+Ici se trouvent tous les fichiers nécessaires à la présentation réalisée avec impress.js.
 Cette présentation sera intégrée au site internet final.
